
[package]
name = "tower-sessions-rusqlite-store"
description = "(tokio-)rusqlite session store for `tower-sessions`."
version = "0.14.1"
edition = "2021"
authors = [
  "Patrick Recher <p@tte.io>",
  "Max Countryman <hello@maxcountryman.com>",
]
license = "MIT"
homepage = "https://github.com/patte/tower-sessions-rusqlite-store"
keywords = ["axum", "sessions", "cookie", "tower", "rusqlite"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/patte/tower-sessions-rusqlite-store"
documentation = "https://docs.rs/tower-sessions-rusqlite-store"
readme = "../README.md"

[dependencies]
async-trait = "0.1.89"
rmp-serde = "1.3.1"
rusqlite = "0.39.0"
tokio-rusqlite = { git="https://github.com/deng232/tokio-rusqlite.git" ,version= "0.7.0"}
thiserror = "2.0.18"
time = "0.3.47"
tower-sessions-core = { version = "0.15.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.8.8"
tower-sessions = "0.15.0"
tokio-rusqlite = { git="https://github.com/deng232/tokio-rusqlite.git", version = "0.7.0", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-test = "0.4.5"
serde = "1.0.228"

[[example]]
name = "counter"
